tests/syntax_error/double_assignment_comma_untyped.jou
def foo() -> None:
    # Python's unpack syntax is not supported in Jou.
    # If you think it should be supported, note that it conflicts with "x, y: int" syntax (see #536).
    x, y = 0  # Error: only one variable can be assigned at a time
